examples/test/testpolicy18667.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18667
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key47: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value47
      podSelector:
        matchLabels:
          key6: value38
          key14: value21
          key26: value14
